# Herding-Simulator

./: .gitignore  BUILD_NOTES.md  README.md  pyproject.toml
gridherd/: __init__.py  __main__.py  agents.py  cli.py  market.py  plots.py  simulate.py
gridherd.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_agents.py  test_feedback.py  test_simulate.py  test_strategies.py
