[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gridherd"
version = "0.1.0"
description = "Agent-based simulation of demand herding on the UK electricity grid"
readme = "BUILD_NOTES.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "matplotlib>=3.8",
    "pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[project.scripts]
gridherd = "gridherd.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["gridherd*"]